# machine-learning-and-gen-ai

./: README.md
Autonomous Deep Research Analyst/: .env.example  .gitignore  README.md  app.py  pyproject.toml
Autonomous Deep Research Analyst/configs/: settings.yaml
Autonomous Deep Research Analyst/docs/: architecture.md
Autonomous Deep Research Analyst/src/: __init__.py  config.py
Autonomous Deep Research Analyst/src/cli/: __init__.py  interactive.py
Autonomous Deep Research Analyst/src/graph/: __init__.py  builder.py
Autonomous Deep Research Analyst/src/llm/: __init__.py  provider.py
Autonomous Deep Research Analyst/src/models/: __init__.py  schemas.py  state.py
Autonomous Deep Research Analyst/src/nodes/: __init__.py  orchestrator.py  report_writer.py  research_agent.py  synthesiser.py
Autonomous Deep Research Analyst/src/report/: __init__.py  charts.py  html_report.py
Autonomous Deep Research Analyst/src/search/: __init__.py  tavily_client.py
Autonomous Deep Research Analyst/tests/: test_core.py
Self Correction Multi Agent System/: .env.example  .gitignore  README.md  app.py  pyproject.toml
Self Correction Multi Agent System/configs/: settings.yaml
Self Correction Multi Agent System/notebooks/: self-correction-multi-agent-system.ipynb
Self Correction Multi Agent System/src/: __init__.py  schemas.py
Self Correction Multi Agent System/src/cli/: __init__.py  interactive.py
Self Correction Multi Agent System/src/db/: __init__.py  cache.py  manager.py
Self Correction Multi Agent System/src/graph/: __init__.py  builder.py
Self Correction Multi Agent System/src/llm/: __init__.py  provider.py
Self Correction Multi Agent System/src/models/: __init__.py  schemas.py  state.py
Self Correction Multi Agent System/src/nodes/: __init__.py  answer.py  approval.py  debugger.py  executor.py  planner.py  validator.py
Self Correction Multi Agent System/src/routing/: __init__.py  decisions.py
Self Correction Multi Agent System/tests/: __init__.py  test_cache.py  test_routing.py  test_schemas.py
document-parser/: .env  README.md  workflow.py
